added total download speed for http downloads. changed the way of calculating download speed
